<resources>
    <string name="app_name">智慧城市</string>
    <string name="title_home">首页</string>
    <string name="title_function">全部服务</string>
    <string name="title_news">新闻</string>
    <string name="title_mine">我的</string>
    <string name="experience_immediately">立即体验</string>
    <string name="ip_port_setting">IP端口设置</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="format">格式：127.0.0.1:8080</string>
    <string name="edit_account">请输入账号</string>
    <string name="edit_password">请输入密码</string>
    <string name="edit_nickname">请输入昵称</string>
    <string name="edit_phone_number">请输入手机号</string>
    <string name="not_account">没有账号，立即注册</string>
    <string name="exist_account">已有账号，立即登录</string>
    <string name="save">保存</string>
    <string name="ip_dont_empty">Ip端口不能为空</string>
    <string name="save_success">保存成功</string>
    <string name="press_again_to_exit">再按一次退出%1$s</string>
    <string name="response_null">response body is null</string>
    <string name="username_not_null">username is not null</string>
    <string name="phone_number_not_null">phone number is not null</string>
    <string name="phone_number_format_error">Please enter the correct phone number</string>
    <string name="password_not_null">password is not null !</string>
    <string name="register_success">注册成功</string>
    <string name="recommended_function">推荐服务</string>
    <string name="hot_topic">热门主题</string>
    <string name="that_idea">说说你的看法</string>
    <string name="release">发布</string>
    <string name="no_comments">暂无评论!</string>
    <string name="personal_settings">个人设置</string>
    <string name="my_order">我的订单</string>
    <string name="change_password">修改密码</string>
    <string name="feedback">意见反馈</string>
    <string name="logout">退出登录</string>
    <string name="username">username</string>
    <string name="avatar">头像:</string>
    <string name="nickname">昵称:</string>
    <string name="sex">性别:</string>
    <string name="women">女</string>
    <string name="man">男</string>
    <string name="phone_number">手机号:</string>
    <string name="id_number">证件号:</string>
    <string name="old_password">旧密码:</string>
    <string name="new_password">新密码:</string>
    <string name="sure_password">确认密码:</string>
    <string name="change">确认修改</string>
    <string name="submit">提交</string>
    <string name="pay">已支付</string>
    <string name="un_pay">未支付</string>
    <string name="no_orders">暂无订单！</string>
    <string name="check_the_record">查看停车记录</string>
    <string name="check_more">查看更多</string>
    <string name="time">时间</string>
    <string name="date">日期</string>
    <string name="make_an_appointment">预约挂号</string>
    <string name="sure">确定</string>
    <string name="experts">专家号</string>
    <string name="ordinary">普通号</string>
    <string name="back_home">返回首页</string>
    <string name="gas">燃气费</string>
    <string name="electricity">电费</string>
    <string name="water">水费</string>
    <string name="operating_announcement">运营公告</string>
    <string name="notice">乘车须知</string>
    <string name="query">线路查询</string>
    <string name="site">站点查询</string>
    <string name="comment">影评</string>
    <string name="trailer">预告</string>
    <string name="news_movie">星闻</string>
    <string name="recommend">推荐</string>
    <string name="ticket">购票</string>
    <string name="title_activity_more">MoreActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>