<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/navigation_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/title_home" />
    <item
        android:id="@id/navigation_function"
        android:icon="@drawable/ic_baseline_apps_24"
        android:title="@string/title_function" />
    <item
        android:id="@id/navigation_huanbao"
        android:icon="@drawable/ic_baseline_navigation_24"
        android:title="智慧党建" />
    <item
        android:id="@id/navigation_news"
        android:icon="@drawable/ic_baseline_newspaper_24"
        android:title="@string/title_news" />
    <item
        android:id="@id/navigation_mine"
        android:icon="@drawable/ic_baseline_account_box_24"
        android:title="@string/title_mine" />
</menu>