<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="data"
            type="com.example.myapplication.ui.mine.MineViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.mine.MineFragment">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                app:cardCornerRadius="50dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/image_avatar"
                    bindingImage="@{data.userInfo.user.avatar}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/avatar" />

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardView"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="12dp"
                android:text="@{data.userInfo.user.nickName}"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif"
                tools:text="@string/username" />
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/personal_settings"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:gravity="center_vertical"
            android:text="@string/personal_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/my_order"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:gravity="center_vertical"
            android:text="@string/my_order"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personal_settings" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/change_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:gravity="center_vertical"
            android:text="@string/change_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_order" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/feedback"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:gravity="center_vertical"
            android:text="@string/feedback"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/change_password" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/white"
            android:text="@string/logout"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/feedback" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/white"
            android:text="@string/login"
            android:textColor="@color/black"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/feedback" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>