<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.mine.oreder.OrederActivity">


        <RadioGroup
            android:id="@+id/rg_selected"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:elevation="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_pay"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:background="@drawable/background_selected"
                android:text="@string/pay"
                android:textSize="24sp" />
            <!--     android:button="@null" 属性将RadioButton 的小圆圈隐藏掉-->

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_no_pay"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/background_selected"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:text="@string/un_pay"
                android:textSize="24sp" />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/no_orders"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            android:elevation="20dp"
            android:gravity="center"
            android:text="@string/no_orders"
            android:textSize="30sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_selected" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_order"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_selected" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>