<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="rdata"
            type="com.example.myapplication.ui.account.register.RegisterViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.account.register.RegisterFragment">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.30">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.20" />

                <EditText
                    android:id="@+id/etAccount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_account"
                    android:text="@={rdata.username}"
                    app:layout_constraintBottom_toTopOf="@+id/guideline2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toStartOf="@+id/guideline3"
                    tools:ignore="MissingConstraints" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="68dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.55" />


                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_password"
                    android:inputType="textPassword"
                    android:text="@={rdata.password}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline3"
                    app:layout_constraintTop_toTopOf="@+id/guideline5"
                    tools:ignore="MissingConstraints" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.70" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnRegister"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:elevation="20dp"
                    android:onClick="@{()->rdata.getRegister()}"
                    android:text="@string/register"
                    app:cornerRadius="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline6" />


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.90" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvToLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exist_account"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline7" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.25" />

                <ImageView

                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline8" />

                <EditText
                    android:id="@+id/etNickName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_nickname"
                    android:text="@={rdata.nickname}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toStartOf="@+id/guideline3"
                    app:layout_constraintTop_toTopOf="@+id/guideline8"
                    tools:ignore="MissingConstraints" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.40" />

                <ImageView

                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline9" />

                <EditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_phone_number"
                    android:inputType="phone"
                    android:text="@={rdata.phonenumber}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toStartOf="@+id/guideline3"
                    app:layout_constraintTop_toTopOf="@+id/guideline9"
                    tools:ignore="MissingConstraints" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
